--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: CI Pipeline
+
 on:
   push:
     branches:
@@ -8,29 +9,57 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  # Job de Build
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout código
-      uses: actions/checkout@v3
+      # 1. Checkout do código
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Configurar Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.9'
+      # 2. Configurar o Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
-    - name: Instalar dependências
-      run: pip install -r requirements.txt
+      # 3. Instalar dependências
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Rodar testes
-      run: pytest
+      # 4. Verificar se o app Flask compila corretamente
+      - name: Verify Flask App
+        run: |
+          python -m flask --version
 
-    - name: Build do projeto
-      run: python setup.py build
+  # Job de Test (depende do Build)
+  test:
+    name: Test
+    needs: build
+    runs-on: ubuntu-latest
 
-    - name: Artefatos (opcional)
-      uses: actions/upload-artifact@v3
-      with:
-        name: build-artifact
-        path: dist/
+    steps:
+      # 1. Checkout do código
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # 2. Configurar o Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      # 3. Instalar dependências (garantindo o mesmo ambiente)
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # 4. Executar os testes
+      - name: Run tests
+        run: |
+          pytest tests/
