--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,29 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.9
-aiosignal==1.3.1
-async-timeout==5.0.1
-attrs==24.2.0
-awscli==1.22.34
-blinker==1.9.0
-boto3==1.35.71
-botocore==1.35.71
-brasilapy==1.2.2
-certifi==2020.6.20
-cffi==1.16.0
-chardet==4.0.0
+boto3==1.35.81
+botocore==1.35.81
+certifi==2024.8.30
 charset-normalizer==3.4.0
-cli_helpers==2.3.1
-
 click==8.1.7
-cmdtest==0.32+git
-colorama==0.4.4
-command-not-found==0.3
-configobj==5.0.8
-cryptography==42.0.7
-dbus-python==1.2.18
-dill==0.3.8
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-docutils==0.17.1
 exceptiongroup==1.2.2
-filelock==3.16.1
-Flask==3.1.0
-frozenlist==1.5.0
-fsspec==2024.9.0
-gunicorn==23.0.0
-gyp==0.1
-httplib2==0.20.2
-huggingface-hub==0.26.3
-idna==3.3
-importlib-metadata==4.6.4
+Flask==2.0.1
+Flask-Cors==4.0.0
+greenlet==3.1.1
+gunicorn==20.1.0
+idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
-jeepney==0.7.1
 Jinja2==3.1.4
-jmespath==0.10.0
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-Markdown==3.3.6
+jmespath==1.0.1
 MarkupSafe==3.0.2
-more-itertools==8.10.0
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-mycli==1.24.3
-networkx==3.4.2
-numpy==2.1.3
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-oauthlib==3.2.0
-olefile==0.46
 packaging==24.2
-pandas==2.2.3
-Pillow==9.0.1
 pluggy==1.5.0
-prompt-toolkit==3.0.43
-propcache==0.2.1
-psutil==5.9.0
-pyaes==1.6.1
-pyarrow==18.1.0
-pyasn1==0.4.8
-pycparser==2.22
-pydantic==1.10.19
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-PyMySQL==1.1.1
-pyparsing==2.4.7
-pyperclip==1.8.2
 pytest==8.3.4
-python-apt==2.4.0+ubuntu4
 python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==5.4.1
-ranger-fm==1.9.3
-regex==2024.11.6
 requests==2.32.3
-roman==3.3
-rsa==4.8
 s3transfer==0.10.4
-safetensors==0.4.5
-SecretStorage==3.3.1
-sentencepiece==0.2.0
-six==1.16.0
-speedtest-cli==2.1.3
-sqlglot==23.17.0
-sqlparse==0.4.4
-ssh-import-id==5.11
-sympy==1.13.1
+six==1.17.0
+SQLAlchemy==1.4.25
 tabulate==0.9.0
-terminaltables==3.1.0
-tokenizers==0.20.3
 tomli==2.2.1
-tqdm==4.67.1
-triton==3.1.0
-ttystatus==0.38
-typing_extensions==4.12.2
-tzdata==2024.2
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-wadllib==1.3.6
-wcwidth==0.2.13
-Werkzeug==3.1.3
-xxhash==3.5.0
-yarl==1.18.3
-zipp==1.0.0
+urllib3>=1.25.4,<1.27
+Werkzeug==2.0.1
+
